// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner A default spinner 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  height: 30px;
  position: relative;
  width: 30px;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

.c1 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 0ms infinite;
  animation: gokANi 1000ms linear 0ms infinite;
  border-radius: px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
}

.c3 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  border-radius: px;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
}

.c4 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  border-radius: px;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
}

.c5 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
}

.c6 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
}

.c7 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  border-radius: px;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
}

.c8 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  border-radius: px;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
}

.c9 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  border-radius: px;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
}

.c10 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  border-radius: px;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
}

.c11 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  border-radius: px;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
}

.c12 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  border-radius: px;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
}

.c13 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  border-radius: px;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
}

.c14 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  border-radius: px;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c2"
  />
  <div
    className="c4 c2"
  />
  <div
    className="c5 c2"
  />
  <div
    className="c6 c2"
  />
  <div
    className="c7 c2"
  />
  <div
    className="c8 c2"
  />
  <div
    className="c9 c2"
  />
  <div
    className="c10 c2"
  />
  <div
    className="c11 c2"
  />
  <div
    className="c12 c2"
  />
  <div
    className="c13 c2"
  />
  <div
    className="c14 c2"
  />
</div>
`;

exports[`Spinner Spinner can be resized 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  height: 200px;
  position: relative;
  width: 200px;
}

.c1 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 0ms infinite;
  animation: gokANi 1000ms linear 0ms infinite;
  border-radius: px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
}

.c3 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  border-radius: px;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
}

.c4 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  border-radius: px;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
}

.c5 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
}

.c6 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
}

.c7 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  border-radius: px;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
}

.c8 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  border-radius: px;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
}

.c9 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  border-radius: px;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
}

.c10 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  border-radius: px;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
}

.c11 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  border-radius: px;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
}

.c12 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  border-radius: px;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
}

.c13 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  border-radius: px;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
}

.c14 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  border-radius: px;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c2"
  />
  <div
    className="c4 c2"
  />
  <div
    className="c5 c2"
  />
  <div
    className="c6 c2"
  />
  <div
    className="c7 c2"
  />
  <div
    className="c8 c2"
  />
  <div
    className="c9 c2"
  />
  <div
    className="c10 c2"
  />
  <div
    className="c11 c2"
  />
  <div
    className="c12 c2"
  />
  <div
    className="c13 c2"
  />
  <div
    className="c14 c2"
  />
</div>
`;

exports[`Spinner Spinner can change markger color 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  color: red;
  height: 30px;
  position: relative;
  width: 30px;
}

.c1 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 0ms infinite;
  animation: gokANi 1000ms linear 0ms infinite;
  border-radius: px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
}

.c3 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  border-radius: px;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
}

.c4 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  border-radius: px;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
}

.c5 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
}

.c6 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
}

.c7 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  border-radius: px;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
}

.c8 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  border-radius: px;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
}

.c9 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  border-radius: px;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
}

.c10 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  border-radius: px;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
}

.c11 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  border-radius: px;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
}

.c12 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  border-radius: px;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
}

.c13 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  border-radius: px;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
}

.c14 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: red;
  -webkit-animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  border-radius: px;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c2"
  />
  <div
    className="c4 c2"
  />
  <div
    className="c5 c2"
  />
  <div
    className="c6 c2"
  />
  <div
    className="c7 c2"
  />
  <div
    className="c8 c2"
  />
  <div
    className="c9 c2"
  />
  <div
    className="c10 c2"
  />
  <div
    className="c11 c2"
  />
  <div
    className="c12 c2"
  />
  <div
    className="c13 c2"
  />
  <div
    className="c14 c2"
  />
</div>
`;

exports[`Spinner Spinner can have n number of markers 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  height: 30px;
  position: relative;
  width: 30px;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

.c1 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 0ms infinite;
  animation: gokANi 1000ms linear 0ms infinite;
  border-radius: px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
}

.c3 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 50ms infinite;
  animation: gokANi 1000ms linear 50ms infinite;
  border-radius: px;
  -webkit-transform: rotate(18deg) translate(0,-160%);
  -ms-transform: rotate(18deg) translate(0,-160%);
  transform: rotate(18deg) translate(0,-160%);
}

.c4 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 100ms infinite;
  animation: gokANi 1000ms linear 100ms infinite;
  border-radius: px;
  -webkit-transform: rotate(36deg) translate(0,-160%);
  -ms-transform: rotate(36deg) translate(0,-160%);
  transform: rotate(36deg) translate(0,-160%);
}

.c5 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 150ms infinite;
  animation: gokANi 1000ms linear 150ms infinite;
  border-radius: px;
  -webkit-transform: rotate(54deg) translate(0,-160%);
  -ms-transform: rotate(54deg) translate(0,-160%);
  transform: rotate(54deg) translate(0,-160%);
}

.c6 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 200ms infinite;
  animation: gokANi 1000ms linear 200ms infinite;
  border-radius: px;
  -webkit-transform: rotate(72deg) translate(0,-160%);
  -ms-transform: rotate(72deg) translate(0,-160%);
  transform: rotate(72deg) translate(0,-160%);
}

.c7 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 250ms infinite;
  animation: gokANi 1000ms linear 250ms infinite;
  border-radius: px;
  -webkit-transform: rotate(90deg) translate(0,-160%);
  -ms-transform: rotate(90deg) translate(0,-160%);
  transform: rotate(90deg) translate(0,-160%);
}

.c8 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 300ms infinite;
  animation: gokANi 1000ms linear 300ms infinite;
  border-radius: px;
  -webkit-transform: rotate(108deg) translate(0,-160%);
  -ms-transform: rotate(108deg) translate(0,-160%);
  transform: rotate(108deg) translate(0,-160%);
}

.c9 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 350ms infinite;
  animation: gokANi 1000ms linear 350ms infinite;
  border-radius: px;
  -webkit-transform: rotate(126deg) translate(0,-160%);
  -ms-transform: rotate(126deg) translate(0,-160%);
  transform: rotate(126deg) translate(0,-160%);
}

.c10 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 400ms infinite;
  animation: gokANi 1000ms linear 400ms infinite;
  border-radius: px;
  -webkit-transform: rotate(144deg) translate(0,-160%);
  -ms-transform: rotate(144deg) translate(0,-160%);
  transform: rotate(144deg) translate(0,-160%);
}

.c11 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 450ms infinite;
  animation: gokANi 1000ms linear 450ms infinite;
  border-radius: px;
  -webkit-transform: rotate(162deg) translate(0,-160%);
  -ms-transform: rotate(162deg) translate(0,-160%);
  transform: rotate(162deg) translate(0,-160%);
}

.c12 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 500ms infinite;
  animation: gokANi 1000ms linear 500ms infinite;
  border-radius: px;
  -webkit-transform: rotate(180deg) translate(0,-160%);
  -ms-transform: rotate(180deg) translate(0,-160%);
  transform: rotate(180deg) translate(0,-160%);
}

.c13 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 550ms infinite;
  animation: gokANi 1000ms linear 550ms infinite;
  border-radius: px;
  -webkit-transform: rotate(198deg) translate(0,-160%);
  -ms-transform: rotate(198deg) translate(0,-160%);
  transform: rotate(198deg) translate(0,-160%);
}

.c14 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 600ms infinite;
  animation: gokANi 1000ms linear 600ms infinite;
  border-radius: px;
  -webkit-transform: rotate(216deg) translate(0,-160%);
  -ms-transform: rotate(216deg) translate(0,-160%);
  transform: rotate(216deg) translate(0,-160%);
}

.c15 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 650ms infinite;
  animation: gokANi 1000ms linear 650ms infinite;
  border-radius: px;
  -webkit-transform: rotate(234deg) translate(0,-160%);
  -ms-transform: rotate(234deg) translate(0,-160%);
  transform: rotate(234deg) translate(0,-160%);
}

.c16 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 700ms infinite;
  animation: gokANi 1000ms linear 700ms infinite;
  border-radius: px;
  -webkit-transform: rotate(252deg) translate(0,-160%);
  -ms-transform: rotate(252deg) translate(0,-160%);
  transform: rotate(252deg) translate(0,-160%);
}

.c17 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 750ms infinite;
  animation: gokANi 1000ms linear 750ms infinite;
  border-radius: px;
  -webkit-transform: rotate(270deg) translate(0,-160%);
  -ms-transform: rotate(270deg) translate(0,-160%);
  transform: rotate(270deg) translate(0,-160%);
}

.c18 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 800ms infinite;
  animation: gokANi 1000ms linear 800ms infinite;
  border-radius: px;
  -webkit-transform: rotate(288deg) translate(0,-160%);
  -ms-transform: rotate(288deg) translate(0,-160%);
  transform: rotate(288deg) translate(0,-160%);
}

.c19 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 850ms infinite;
  animation: gokANi 1000ms linear 850ms infinite;
  border-radius: px;
  -webkit-transform: rotate(306deg) translate(0,-160%);
  -ms-transform: rotate(306deg) translate(0,-160%);
  transform: rotate(306deg) translate(0,-160%);
}

.c20 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 900ms infinite;
  animation: gokANi 1000ms linear 900ms infinite;
  border-radius: px;
  -webkit-transform: rotate(324deg) translate(0,-160%);
  -ms-transform: rotate(324deg) translate(0,-160%);
  transform: rotate(324deg) translate(0,-160%);
}

.c21 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 950ms infinite;
  animation: gokANi 1000ms linear 950ms infinite;
  border-radius: px;
  -webkit-transform: rotate(342deg) translate(0,-160%);
  -ms-transform: rotate(342deg) translate(0,-160%);
  transform: rotate(342deg) translate(0,-160%);
}

<div
  className="c0"
  markers={20}
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c2"
  />
  <div
    className="c4 c2"
  />
  <div
    className="c5 c2"
  />
  <div
    className="c6 c2"
  />
  <div
    className="c7 c2"
  />
  <div
    className="c8 c2"
  />
  <div
    className="c9 c2"
  />
  <div
    className="c10 c2"
  />
  <div
    className="c11 c2"
  />
  <div
    className="c12 c2"
  />
  <div
    className="c13 c2"
  />
  <div
    className="c14 c2"
  />
  <div
    className="c15 c2"
  />
  <div
    className="c16 c2"
  />
  <div
    className="c17 c2"
  />
  <div
    className="c18 c2"
  />
  <div
    className="c19 c2"
  />
  <div
    className="c20 c2"
  />
  <div
    className="c21 c2"
  />
</div>
`;

exports[`Spinner Spinner makers radius can be adjusted 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  height: 30px;
  position: relative;
  width: 30px;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

.c1 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 0ms infinite;
  animation: gokANi 1000ms linear 0ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
}

.c3 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  animation: gokANi 1000ms linear 76.92307692307692ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
}

.c4 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  animation: gokANi 1000ms linear 153.84615384615384ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
}

.c5 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  animation: gokANi 1000ms linear 230.76923076923077ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
}

.c6 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  animation: gokANi 1000ms linear 307.6923076923077ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
}

.c7 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  animation: gokANi 1000ms linear 384.61538461538464ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
}

.c8 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  animation: gokANi 1000ms linear 461.53846153846155ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
}

.c9 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  animation: gokANi 1000ms linear 538.4615384615385ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
}

.c10 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  animation: gokANi 1000ms linear 615.3846153846154ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
}

.c11 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  animation: gokANi 1000ms linear 692.3076923076923ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
}

.c12 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  animation: gokANi 1000ms linear 769.2307692307693ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
}

.c13 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  animation: gokANi 1000ms linear 846.1538461538462ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
}

.c14 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  animation: gokANi 1000ms linear 923.0769230769231ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c2"
  />
  <div
    className="c4 c2"
  />
  <div
    className="c5 c2"
  />
  <div
    className="c6 c2"
  />
  <div
    className="c7 c2"
  />
  <div
    className="c8 c2"
  />
  <div
    className="c9 c2"
  />
  <div
    className="c10 c2"
  />
  <div
    className="c11 c2"
  />
  <div
    className="c12 c2"
  />
  <div
    className="c13 c2"
  />
  <div
    className="c14 c2"
  />
</div>
`;

exports[`Spinner Spinner speed can be set 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  height: 30px;
  position: relative;
  width: 30px;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
}

.c1 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 0ms infinite;
  animation: gokANi 2000ms linear 0ms infinite;
  border-radius: px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
}

.c3 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 153.84615384615384ms infinite;
  animation: gokANi 2000ms linear 153.84615384615384ms infinite;
  border-radius: px;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
}

.c4 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 307.6923076923077ms infinite;
  animation: gokANi 2000ms linear 307.6923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
}

.c5 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 461.53846153846155ms infinite;
  animation: gokANi 2000ms linear 461.53846153846155ms infinite;
  border-radius: px;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
}

.c6 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 615.3846153846154ms infinite;
  animation: gokANi 2000ms linear 615.3846153846154ms infinite;
  border-radius: px;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
}

.c7 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 769.2307692307693ms infinite;
  animation: gokANi 2000ms linear 769.2307692307693ms infinite;
  border-radius: px;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
}

.c8 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 923.0769230769231ms infinite;
  animation: gokANi 2000ms linear 923.0769230769231ms infinite;
  border-radius: px;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
}

.c9 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 1076.923076923077ms infinite;
  animation: gokANi 2000ms linear 1076.923076923077ms infinite;
  border-radius: px;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
}

.c10 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 1230.7692307692307ms infinite;
  animation: gokANi 2000ms linear 1230.7692307692307ms infinite;
  border-radius: px;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
}

.c11 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 1384.6153846153845ms infinite;
  animation: gokANi 2000ms linear 1384.6153846153845ms infinite;
  border-radius: px;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
}

.c12 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 1538.4615384615386ms infinite;
  animation: gokANi 2000ms linear 1538.4615384615386ms infinite;
  border-radius: px;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
}

.c13 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 1692.3076923076924ms infinite;
  animation: gokANi 2000ms linear 1692.3076923076924ms infinite;
  border-radius: px;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
}

.c14 {
  width: 6%;
  height: 20%;
  position: absolute;
  left: 48%;
  top: 40%;
  opacity: 0.25;
  background: #262D33;
  -webkit-animation: gokANi 2000ms linear 1846.1538461538462ms infinite;
  animation: gokANi 2000ms linear 1846.1538461538462ms infinite;
  border-radius: px;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
}

<div
  className="c0"
  speed={2000}
>
  <div
    className="c1 c2"
  />
  <div
    className="c3 c2"
  />
  <div
    className="c4 c2"
  />
  <div
    className="c5 c2"
  />
  <div
    className="c6 c2"
  />
  <div
    className="c7 c2"
  />
  <div
    className="c8 c2"
  />
  <div
    className="c9 c2"
  />
  <div
    className="c10 c2"
  />
  <div
    className="c11 c2"
  />
  <div
    className="c12 c2"
  />
  <div
    className="c13 c2"
  />
  <div
    className="c14 c2"
  />
</div>
`;
